add query params to get transactions for user path to search between dates
